--- a/mobile.css
+++ b/mobile.css
@@ -38,19 +38,49 @@
   body {
     /* background-color: green; */
   }
+
+  .canvas {
+    width: 100%;
+    height: 100%;
+  }
+
   .mobile .canvas {
     width: 120vw;
-    height:150vh;
+    height: 150vh;
     transform: scale(0.8);
     transform-origin: left top;
     position:fixed;
   }
+
   .mobile .container {
     overflow-x: hidden !important;
   }
+
   .more_desc{
     column-count: 1;
   }
+
+  .mobile #text-id{
+  	font-size: 1.75em;
+
+  }
+
+  .mobile #text-title{
+  	font-size: 3em;
+  }
+
+  .mobile #text-date{
+  	font-size: 1.65em;
+  }
+
+  .mobile #text-desc{
+  	font-size: 1.5em;
+  }
+
+  .mobile .label-text{
+    font-size: 1.5em;
+  }
+
 }
 @media screen and (max-width: 325px) {
   body {
