--- a/style.css
+++ b/style.css
@@ -251,6 +251,14 @@ body{
 	font-size: 12px;
 	color:white !important;
 	-webkit-font-smoothing: antialiased;
+  /* Careful, this breaks the word wherever it is without a hyphen */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  /* Adds a hyphen where the word breaks */
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 a {
 	color:white;
